can search user by geo <lon, lat> with radius
